--- a/main.css
+++ b/main.css
@@ -1,5 +1,125 @@
 *{
-    background-color: beige;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-/*new files*/
+#sports{
+    background-color: #d9d9d9;
+}
+
+#economia{
+    background-color: #ffffe6;
+}
+
+#tecnologia{
+    background-color:   #e6f7ff;
+}
+
+#entretenimento{
+    background-color:   #ffe6ff;
+}
+
+time{
+    color: grey;
+}
+body > header{
+    background-color: rgb(11, 2, 20);
+    padding: 16px 0;
+    color: rgb(255, 255, 255);
+}
+
+section{
+    padding: 16px 0;
+}
+
+section h2, .articles article{
+    margin-bottom: 16px;
+}
+
+.articles article h3{
+    margin-bottom: 8px;
+    margin-top: 8px;
+}
+
+.articles article a{
+    padding: 8px;
+    color:black;
+    display: inline-block;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    font-weight: 300;
+    margin-top: 8px;
+}
+#sports a{
+    background-color: #262626;
+}
+
+#economia a{
+    background-color: #666600;
+}
+#tecnologia a{
+    background-color: #00334d;
+}
+#entretenimento a{
+    background-color: #4d004d;
+}
+#economia a:hover,
+#sports a:hover{
+    background-color: rgb(195, 210, 238);
+    color: black;
+    transition: 0.5s;
+}
+
+#tecnologia a:hover,
+#entretenimento a:hover{
+    background-color: rgb(124, 166, 244);
+    color: black;
+    transition: 0.5s;
+}
+
+header .container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+header li{
+    display: inline;
+}
+
+header li a{
+    text-decoration: none;
+    color:rgb(255, 255, 255);
+    padding-right: 15px;
+}
+.container{
+    width: 1366px;
+    margin: 0 auto;
+}
+
+section .articles{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.articles article img{
+    width: 100%;
+}
+
+.articles article{
+    width: 30%;
+}
+
+.articles article p, .articles article a{
+    font-family:Arial, Helvetica, sans-serif;
+}
+
+.articles article h3{
+    font-size: 23px;
+}
+
+section h2{
+    font-size: 32px;
+}
